syntax = "proto3";

package proto;
option go_package="./proto";

message MaxRequest {
	int32 number = 1;
}

message MaxResponse {
	int32 max = 1;
}

service MaxService {
	rpc FindMax(stream MaxRequest) returns (stream MaxResponse) {};
}
